# passivbot-rs

./: .gitignore  Cargo.toml  README.md  config.hjson
.github/workflows/: rust.yml
src/: analysis.rs  backtest.rs  bot.rs  config.rs  constants.rs  data.rs  downloader.rs  forager.rs  main.rs  manager.rs  optimizer.rs  profit_transfer.rs  types.rs
src/exchange/: binance.rs  bitget.rs  bybit.rs  gateio.rs  hyperliquid.rs  mod.rs  okx.rs  simulated.rs
src/grid/: closes.rs  entries.rs  mod.rs  types.rs  utils.rs
