[package]
name = "passivbot-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
config = "0.15"
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = "0.17"
ndarray = "0.15.6"
async-trait = "0.1"
serde-hjson = "1.1.0"
chrono = "0.4"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
tracing = "0.1"
tracing-subscriber = "0.3"
serde_urlencoded = "0.7"
clap = { version = "4.0", features = ["derive"] }
csv = "1.1"
rand = "0.8"
statrs = "0.16.0"
rayon = "1.8"
base64 = "0.13"
futures = "0.3"
zip = "0.6"
bytes = "1"
ndarray-npy = "0.8.1"
anyhow = "1.0"
log = "0.4.27"
